fixed not displaying custom scrollbar on the actors page

--- a/actors.css
+++ b/actors.css
@@ -19,12 +19,12 @@
 }
 
 .actors {
-height: 100vh;
+height: 100%;
 width: 100%;  
 background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url("https://cdn.pixabay.com/photo/2017/06/02/23/54/harry-potter-2367608_960_720.jpg");
 background-position: center;
 background-size: cover;
-position: fixed;
+position: relative;
 color: white;
 text-align: center;
 }
